--- a/front-end/index.html
+++ b/front-end/index.html
@@ -31,7 +31,8 @@
             </div> -->
         </section>
 
-        <script src="./script.js"></script>
+        <!-- <script src="./script.js"></script> -->
+         <script src="./test-script.js"></script>
 
 
 </body>
